kubernetes/networkpolicies/allow-https-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-egress
  namespace: secure-app
spec:
  podSelector:
    matchLabels:
      egress: internet
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
